[package]
name = "oxideav-subtitle"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-subtitle"
authors = ["Mark Karpeles"]
description = "Subtitle codecs + containers for oxideav — SRT, WebVTT, and ASS/SSA"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-subtitle"
keywords = ["multimedia", "subtitle", "srt", "webvtt", "pure-rust"]
categories = ["multimedia", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.1"
[dev-dependencies]
oxideav-codec = "0.1"
oxideav-container = "0.1"
oxideav-core = "0.1"