[package]
name = "oxideav-subtitle"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-subtitle"
authors = ["Mark Karpeles"]
description = "Subtitle codecs + containers for oxideav — SRT, WebVTT, and ASS/SSA"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-subtitle"
keywords = ["multimedia", "subtitle", "srt", "webvtt", "pure-rust"]
categories = ["multimedia", "parser-implementations"]

[features]
# `text` enables the high-quality TTF rendering path: shape via
# `oxideav-scribe` (`Shaper::shape_to_paths`), then rasterise the resulting
# glyph nodes through `oxideav-raster`'s vector→raster renderer onto the
# subtitle frame. Default-on so an out-of-the-box `oxideav-subtitle = "0.1"`
# can render real fonts; downstream embedders that only need the
# `BitmapFont` fallback (no TTF face configured, no scribe / raster dep
# tree) can opt out via `default-features = false`.
default = ["text"]
text = ["dep:oxideav-scribe", "dep:oxideav-raster"]

[dependencies]
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
# Both gated behind the `text` feature — see `[features]` above.
oxideav-scribe = { version = "0.1", optional = true }
oxideav-raster = { version = "0.1", optional = true }

[dev-dependencies]
oxideav-core = "0.1"
